--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ex-api",
   "version": "1.0.0",
-  "description": "Eurico Santiago Climaco Rodrigues",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.2"
   }
 }
